--- a/templates/base.html
+++ b/templates/base.html
@@ -6,85 +6,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %} | e-Fair </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="icon" href="{% static 'img/python.png' %}" sizes="16x16 32x32" type="image/png">
+    <link rel="icon" href="{% static 'img/favicon.png' %}" sizes="16x16 32x32" type="image/png">
     <style>
-    body {
-        background-color: #f8f9fa;
-        margin-bottom: 70px;
-    }
-    .header {
-        background-color: #343a40;
-        color: white;
-        padding: 20px 0;
-        text-align: center;
-    }
-    .footer {
-        background-color: #343a40;
-        color: white;
-        text-align: center;
-        padding: 20px 0;
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-    }
-    .custom-btn {
-        width: 150px; 
-    }
+        body {
+            background-color: #f8f9fa;
+            margin-bottom: 70px;
+        }
+        .nav-link {
+            color: #ffffff;
+            text-transform: uppercase;
+        }
     </style>
 </head>
 <body>
-    <div class="header">
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container">
-                <a class="navbar-brand" href="{% url 'home_url' %}">
-                    <img src="{% static 'img/logo.png' %}" alt="Логотип"  height="30" class="d-inline-block align-text-top">
-                    e-Fair
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'home_url' %}">Главная</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'cabinet_url' %}">Кабинет</a>
-                        </li>
-                    </ul>
-                    <div class="d-flex">
-                    {% if user.is_authenticated %}
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'cabinet_url' %}">{{ user.first_name }} {{ user.last_name }} |</a>
-                        </li>
-                    </ul>
-                        <a href="{% url 'logout_url' %}" class="btn custom-btn btn-outline-light me-2">Выйти</a>
-                    {% else %}
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'signup_url' %}">Гость |</a>
-                        </li>
-                    </ul>
-                        <a href="{% url 'login_url' %}" class="btn custom-btn btn-outline-light me-2">Авторизация</a>
-                        <a href="{% url 'signup_url' %}" class="btn custom-btn btn-outline-light">Регистрация</a>
-                    {% endif %}
-                    </div>
-                </div>
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #009999;">
+        <div class="container">
+            <a class="navbar-brand" href="{% url 'home_url' %}">
+                <img src="{% static 'img/logo.png' %}" alt="Logo" width="50" class="d-inline-block align-text-center">
+                e-Fair
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'home_url' %}">Главная</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'cabinet_url' %}">Кабинет</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'offers_url' %}">Предложения</a>
+                    </li>
+                </ul>
             </div>
-        </nav>
-    </div>
-
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                {% if user.is_authenticated %}
+                <ul class ="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'cabinet_url' %}">{{ user.first_name }} {{ user.last_name }}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">|</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout_url' %}">Выход</a>
+                    </li>
+                </ul>
+                {% else %}
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login_url' %}">Авторизация</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'signup_url' %}">Регистрация</a>
+                    </li>
+                </ul>
+                {% endif %}
+            </div>
+        </div>
+    </nav>
     <div class="container mt-5">
-    {% block content %}
-
-    {% endblock content %}
+        {% block content %}
+        {% endblock content %}
     </div>
-
-    <div class="footer">
-        <p>&copy; <span>{{ current_year }}</span> Orakov's JC Project. All rights reserved.</p>
-    </div>
-
+    <footer class="text-white py-3 fixed-bottom" style="background-color: #009999;">
+        <div class="container text-center">
+            &copy;<span>{{ current_year }}</span> Sergey Orakov's Project for JustCode
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
