--- a/templates/home.html
+++ b/templates/home.html
@@ -6,11 +6,11 @@
     <div class="row">
         <div class="col-md-8">
         <div class="container">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <ol class="carousel-indicators">
-            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
-            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
-            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <ol class="carousel-indicators visually-hidden">
+            <li data-bs-target="#carouselExampleFade" data-bs-slide-to="0" class="active"></li>
+            <li data-bs-target="#carouselExampleFade" data-bs-slide-to="1"></li>
+            <li data-bs-target="#carouselExampleFade" data-bs-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
             <div class="carousel-item active">
@@ -23,11 +23,11 @@
                 <img src="{% static 'img/advertisement3.jpg' %}" class="d-block w-100" alt="Advertisement 3">
             </div>
         </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+            <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+            <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </a>
