--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
         margin-bottom: 70px;
     }
         .custom-btn {
-        width: 150px; 
+        width: 300px; 
         }
     </style>
 </head>
@@ -40,7 +40,11 @@
         </div>
     </div>
     </div>
-
+    {% for field in form %}
+        {% if field.errors %}
+        <li>{{ field.label }}: {{ field.errors|join:", " }}</li>
+        {% endif %}
+    {% endfor %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
