--- a/templates/cabinet.html
+++ b/templates/cabinet.html
@@ -18,7 +18,7 @@
         </div>
         <div class="col-md-4">
             <div class="card">
-                <img src="{% static 'img/default_avatar.jpg' %}" class="card-img-top rounded-circle p-3" alt="Avatar">
+                <img src="{{ user.avatar.url }}" class="card-img-top rounded-circle p-3" alt="Avatar">
                 <div class="card-body">
                 <h5 class="card-title">{{ user.first_name }} {{ user.last_name }}</h5>
                 <p class="card-text">Электронная почта: {{ user.email }}</p>
