--- a/templates/offers.html
+++ b/templates/offers.html
@@ -4,12 +4,77 @@
 
 {% block content %}
 {% if user.is_authenticated %}
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-8">
+            <div class="card">
+                <div class="card-body">
+                    <div class="d-grid gap-2">
+                        <form class="input-group" method="GET">
+                            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" name="q" value="{{ search_query }}">
+                            <button type="submit" class="btn btn-outline-primary">search</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-md-8">
+            <div class="card">
+                <div class="card-body">
+                    <div class="d-grid gap-2">
+                        {% for offer in offers %}
+                        <div class="container">
+                            <div class="row">
+                                <div class="col">
+                                    <img src="{{ offer.image.url }}" class="rounded" alt="Offer_image" style="max-height: 50px">                                          
+                                </div>
+                                <div class="col-8">
+                                    <a
+                                </div>
+                            </div>
+                          </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+                        {% for offer in offers %}
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="d-grid gap-2">
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="col-ms">
+                                            </div>
+                                            <div class="col-ms">
+                                                <img src="{{ offer.image.url }}" class="img-fluid rounded" alt="Offer_image">                                          </div>
+                                            </div>
+                                          
+                                        </div>
+                                      </div>
+                                    
+                                </div>
+                                <div class="d-grid gap-2 col-md-8">
+
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
+
 <h1>Categories</h1>
     <ul>
         {% for category in categories %}
-            <li><a href="{% url 'category_offers' category.id %}">{{ category.name }}</a></li>
+            <li><a href="{% url 'offers_url' category.id %}">{{ category.name }}</a></li>
         {% endfor %}
-    </ul>
+            <li><a href="{% url 'offers_url' %}">Show All Categories</a></li>    </ul>
 
     <h1>Offers</h1>
     {% if selected_category %}
@@ -18,6 +83,7 @@
     <ul>
         {% for offer in offers %}
             <li>{{ offer.title }} - {{ offer.description }} ({{ offer.category.name }})</li>
+            <img src="{{ offer.image.url }}" class="card-img-top rounded-circle p-3" alt="Offer_image">
         {% endfor %}
     </ul>
 {% else %}
