--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -60,10 +60,10 @@
                 <label for="password2" class="form-label">Подтвердить пароль</label>
                 <input type="password" class="form-control" id="password2" name="password2">
             </div>
-            <div class="d-flex">
-                <button type="submit" class="btn btn-outline-dark me-2">Сохранить изменения</button>
-                <button type="reset" class="btn custom-btn btn-outline-dark me-2">Сбросить</button>
-                <a href="{% url 'cabinet_url' %}" class="btn custom-btn btn-outline-dark">Закрыть</a>      
+            <div class="d-grid gap-2 mt-3">
+                <button type="submit" class="btn btn-outline-dark">Сохранить изменения</button>
+                <button type="reset" class="btn btn-outline-dark">Сбросить</button>
+                <a href="{% url 'cabinet_url' %}" class="btn btn-outline-dark">Закрыть</a>      
             </div>
         </form>
         </div>
