--- a/templates/base.html
+++ b/templates/base.html
@@ -47,9 +47,6 @@
                         <a class="nav-link" href="{% url 'cabinet_url' %}">{{ user.first_name }} {{ user.last_name }}</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">|</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout_url' %}">Выход</a>
                     </li>
                 </ul>
@@ -76,5 +73,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
