--- a/templates/signup.html
+++ b/templates/signup.html
@@ -64,10 +64,10 @@
                 <label for="password2" class="form-label">Подтвердить пароль</label>
                 <input type="password" class="form-control" id="password2" name="password2" required>
             </div>
-            <div class="d-flex">
-                <button type="submit" class="btn btn-outline-dark me-2">Зарегистрироваться</button>
-                <button type="reset" class="btn custom-btn btn-outline-dark me-2">Сбросить</button>
-                <a href="{% url 'home_url' %}" class="btn custom-btn btn-outline-dark">Закрыть</a>      
+            <div class="d-grid gap-2 mt-3">
+                <button type="submit" class="btn btn-outline-dark">Зарегистрироваться</button>
+                <button type="reset" class="btn btn-outline-dark">Сбросить</button>
+                <a href="{% url 'home_url' %}" class="btn btn-outline-dark">Закрыть</a>      
             </div>
         </form>
         </div>
