--- a/templates/home.html
+++ b/templates/home.html
@@ -46,6 +46,7 @@
             </div>
         </div>
         </div>
+        <div id="map" style="height: 400px;"></div>
     </div>
 {% endblock content %}
 
