--- a/templates/cabinet.html
+++ b/templates/cabinet.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Кабинет{% endblock title %}
+{% block title %}Cabinet{% endblock title %}
 
 {% block content %}
 {% if user.is_authenticated %}
