--- a/templates/base.html
+++ b/templates/base.html
@@ -4,25 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock title %} | e-Fair </title>
+    <title>{% block title %}{% endblock title %} | DigitalFair </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="icon" href="{% static 'img/favicon.png' %}" sizes="16x16 32x32" type="image/png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <script src="{% static 'doc/lottie.min.js' %}"></script>
     <style>
         body {
             background-color: #f8f9fa;
+            font-family: 'Raleway', sans-serif;
             margin-bottom: 70px;
         }
         .nav-link {
-            color: #ffffff;
+            color: #434043;
+            font-size: 16px;
             text-transform: uppercase;
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #009999;">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm sticky-top" style="background-color: #009999;">
         <div class="container">
             <a class="navbar-brand" href="{% url 'home_url' %}">
-                <img src="{% static 'img/logo.png' %}" alt="Logo" width="50" class="d-inline-block align-text-center">
-                e-Fair
+                <img src="{% static 'img/logo.png' %}" alt="Logo" height="50" class="d-inline-block align-text-center">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -30,24 +36,24 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home_url' %}">Главная</a>
+                        <a class="nav-link" href="{% url 'home_url' %}"><h4>Главная</h4></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'cabinet_url' %}">Кабинет</a>
+                        <a class="nav-link" href="{% url 'cabinet_url' %}"><h4>Кабинет</h4></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'offers_url' %}">Предложения</a>
+                        <a class="nav-link" href="{% url 'offers_url' %}"><h4>Предложения</h4></a>
                     </li>
                 </ul>
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 {% if user.is_authenticated %}
                 <ul class ="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'cabinet_url' %}">{{ user.first_name }} {{ user.last_name }}</a>
+                    <li class="nav-item my-auto">
+                        <a class="nav-link " href="{% url 'cabinet_url' %}"><h5><i class="bi bi-person-circle"></i> {{ user.first_name }} {{ user.last_name }}</h5></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout_url' %}">Выход</a>
+                        <a class="nav-link" href="{% url 'logout_url' %}"><h4>Выход</h4></a>
                     </li>
                 </ul>
                 {% else %}
