--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Авторизация | e-Fair </title>
+    <title>LogIn | DigitalFair</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="icon" href="{% static 'img/python.png' %}" sizes="16x16 32x32" type="image/png">
     <style>
@@ -34,9 +34,10 @@
             </div>
             <div class="d-grid gap-2 mt-3">
                 <button type="submit" class="btn btn-outline-dark">Авторизоваться</button>
-                <button type="reset" class="btn btn-outline-dark">Сбросить</button>
-                <a href="{% url 'home_url' %}" class="btn btn-outline-dark">Закрыть</a>      </form>
-            </div>
+                <a href="{% url 'signup_url' %}" class="btn btn-outline-dark">Регистрация</a>      </form>
+                <a href="{% url 'home_url' %}" class="btn btn-outline-dark">Закрыть</a>      
+        </form>
+        </div>
         </div>
     </div>
     </div>
