--- a/templates/offer_create.html
+++ b/templates/offer_create.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Создание предложения | e-Fair </title>
+    <title>Offer Create | DigitalFair</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="icon" href="{% static 'img/favicon.png' %}" sizes="16x16 32x32" type="image/png">
     <style>
@@ -21,56 +21,96 @@
     <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
-        <h2 class="mb-4">Создание предложения</h2>
+        <h2 class="mb-4">Создание предложения на продажу</h2>
         <form method="post">
             {% csrf_token %}
-            <div class="mb-3">
-                <label for="title" class="form-label">Наименование</label>
-                <input type="text" class="form-control" id="title" name="title" maxlength="64" value="{{ offer.title }}">
+            <div class="container">
+                <div class="row">
+                    <div class="mb-3">
+                        <label for="title" class="form-label">Наименование</label>
+                        <input type="text" class="form-control" id="title" name="title" maxlength="64" value="{{ offer.title }}">
+                    </div>
+                    <div class="mb-3">
+                        <label for="image" class="form-label">Изображение</label>
+                        <input type="file" class="form-control" id="image" name="image">
+                    </div>
+                    <div class="mb-3">
+                        <label for="category" class="form-label">Категория</label>
+                        <select class="form-control" id="category" name="category">
+                            {% for category in form.fields.category.choices %}
+                            <option value="{{ category.0 }}" {% if category.0 == offer.category.pk %}selected{% endif %}>{{ category.1 }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>            
+                    <div class="mb-3">
+                        <label for="manufacturer" class="form-label">Производитель</label>
+                        <select class="form-control" id="manufacturer" name="manufacturer">
+                            {% for manufacturer in form.fields.manufacturer.choices %}
+                            <option value="{{ manufacturer.0 }}" {% if manufacturer.0 == offer.manufacturer.pk %}selected{% endif %}>{{ manufacturer.1 }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    
+                    <div class="mb-3">
+                        <label for="offer_model" class="form-label">Модель</label>
+                        <select class="form-control" id="offer_model" name="offer_model">
+                            {% for offer_model in form.fields.offer_model.choices %}
+                            <option value="{{ offer_model.0 }}" {% if offer_model.0 == offer.offer_model.pk %}selected{% endif %}>{{ offer_model.1 }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>                                     
+                    <div class="mb-3">
+                        <label for="description" class="form-label">Описание</label>
+                        <input type="textarea" class="form-control" id="description" name="description" value="{{ offer.description }}">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 mb-3">
+                        <label for="amount" class="form-label">Количество</label>
+                        <input type="text" class="form-control" id="amount" name="amount" maxlength="64" value="{{ offer.amount }}">
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <label for="unit" class="form-label">Ед.изм.</label>
+                        <select class="form-control" id="unit" name="unit">
+                            {% for unit in form.fields.unit.choices %}
+                            <option value="{{ unit.0 }}" {% if unit.0 == offer.unit.pk %}selected{% endif %}>{{ unit.1 }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <label for="price" class="form-label">Стоимость</label>
+                        <input type="text" class="form-control" id="price" name="price" maxlength="64" value="{{ offer.price }}">
+                    </div>
+                </div>
+            </div>
+            <hr class="hr" />
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <label for="country" class="form-label">Страна</label>
+                        <input type="text" class="form-control" id="country" name="country" maxlength="64" value="{{ user.country }}">
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <label for="city" class="form-label">Город</label>
+                        <input type="text" class="form-control" id="city" name="city" maxlength="64" value="{{ user.city }}">
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <label for="street" class="form-label">Улица</label>
+                        <input type="text" class="form-control" id="street" name="street" maxlength="64" value="{{ user.street }}">
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <label for="home_number" class="form-label">Номер дома/строения/здания</label>
+                        <input type="text" class="form-control" id="home_number" name="home_number" maxlength="64" value="{{ user.home_number }}">
+                    </div>
+                </div>
             </div>
             <div class="mb-3">
-                <label for="image" class="form-label">Изображение</label>
-                <input type="file" class="form-control" id="image" name="image">
-            </div>
-            <div class="mb-3">
-                <label for="category" class="form-label">Категория</label>
-                <select class="form-control" id="category" name="category">
-                    {% for category in form.fields.category.choices %}
-                    <option value="{{ category.0 }}" {% if category.0 == offer.category.pk %}selected{% endif %}>{{ category.1 }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div class="mb-3">
-                <label for="description" class="form-label">Описание</label>
-                <input type="textarea" class="form-control" id="description" name="description" value="{{ offer.description }}">
-            </div>
-            <div class="mb-3">
-                <label for="amount" class="form-label">Количество</label>
-                <input type="text" class="form-control" id="amount" name="amount" maxlength="64" value="{{ offer.amount }}">
-            </div>
-            <div class="mb-3">
-                <label for="price" class="form-label">Стоимость</label>
-                <input type="text" class="form-control" id="price" name="price" maxlength="64" value="{{ offer.price }}">
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" name="in_activ" checked>
-                <label class="form-check-label" for="flexCheckChecked">Предложение актуально</label>
-            </div>
-            <div class="mb-3">
-                <label for="country" class="form-label">Страна</label>
-                <input type="text" class="form-control" id="country" name="country" maxlength="64" value="{{ user.country }}">
-            </div>
-            <div class="mb-3">
-                <label for="city" class="form-label">Город</label>
-                <input type="text" class="form-control" id="city" name="city" maxlength="64" value="{{ user.city }}">
-            </div>
-            <div class="mb-3">
-                <label for="street" class="form-label">Улица</label>
-                <input type="text" class="form-control" id="street" name="cistreetty" maxlength="64" value="{{ user.street }}">
-            </div>
-            <div class="mb-3">
-                <label for="home_number" class="form-label">Номер дома/строения/здания</label>
-                <input type="text" class="form-control" id="home_number" name="home_number" maxlength="64" value="{{ user.home_number }}">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="true" id="flexCheckChecked" name="in_active" checked>
+                    <label class="form-check-label" for="flexCheckChecked">Предложение актуально</label>
+                </div>
             </div>
             <div class="d-grid gap-2 mt-3">
                 <button type="submit" class="btn btn-outline-dark me-2">Создать предложение</button>
