--- a/templates/offer_delete.html
+++ b/templates/offer_delete.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Удаление предложения | e-Fair </title>
+    <title>Offer Delete | DigitalFair</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="icon" href="{% static 'img/favicon.png' %}" sizes="16x16 32x32" type="image/png">
     <style>
