--- a/templates/base.html
+++ b/templates/base.html
@@ -59,10 +59,10 @@
                 {% else %}
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login_url' %}">Авторизация</a>
+                        <a class="nav-link" href="{% url 'login_url' %}"><h4>Авторизация</h4></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'signup_url' %}">Регистрация</a>
+                        <a class="nav-link" href="{% url 'signup_url' %}"><h4>Регистрация</h4></a>
                     </li>
                 </ul>
                 {% endif %}
